--- a/src/main/resources/META-INF/gradle-plugins/decaf.tools.gradle.plugin.ll1pg.properties
+++ b/src/main/resources/META-INF/gradle-plugins/decaf.tools.gradle.plugin.ll1pg.properties
@@ -1,1 +1,1 @@
-implementation-class=decaf.tools.gradle.plugin.ll1pg.LL1ParserGenPlugin
+implementation-class=decaf.tools.gradle.plugin.ll1pg.LL1pgPlugin
